Improved attribute validation on all entities and fixed small bugs.

--- a/MovieGalleryApp.Web/Views/Actor/Add.cshtml
+++ b/MovieGalleryApp.Web/Views/Actor/Add.cshtml
@@ -6,7 +6,7 @@
         <div class="edit-form">
             <div class="edit-title">Welcome, Movie Administrator!</div>
             <div class="edit-subtitle">Here you can add a new cast member!</div>
-            <form id="edit" method="post">
+            <form id="add" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="edit-input-container ic1">
                     <label asp-for="FirstName" class="form-label edit-position"></label>
