Added tests for all other services.

--- a/MovieGalleryApp.Web/Views/Genre/All.cshtml
+++ b/MovieGalleryApp.Web/Views/Genre/All.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieGalleryApp.Core.Models.Genre
-@model IEnumerable<GenreTableVM>
+@model ICollection<GenreTableVM>
 @{
     int i = 0;
 }
