--- a/MovieGalleryApp.Web/Views/Movie/All.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/All.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieGalleryApp.Core.Models.Movie
-@model IEnumerable<MovieTableVM>
+@model ICollection<MovieTableVM>
 @{
     int i = 0;
 }
