--- a/MovieGalleryApp.Web/Views/Country/All.cshtml
+++ b/MovieGalleryApp.Web/Views/Country/All.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieGalleryApp.Core.Models.Country
-@model IEnumerable<CountryAllVM>
+@model ICollection<CountryAllVM>
 @{
     int i = 0;
 }
