--- a/MovieGalleryApp.Web/Views/Genre/Add.cshtml
+++ b/MovieGalleryApp.Web/Views/Genre/Add.cshtml
@@ -9,9 +9,9 @@
             <form id="edit" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="edit-input-container ic1">
-                    <label asp-for="Title" class="form-label edit-position"></label>
-                    <input asp-for="Title" class="form-control edit-width" aria-required="true" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="GenreTitle" class="form-label edit-position"></label>
+                    <input asp-for="GenreTitle" class="form-control edit-width" aria-required="true" />
+                    <span asp-validation-for="GenreTitle" class="text-danger"></span>
                 </div>
                 <button id="login-submit" type="submit" class="edit-submit">Submit</button>
             </form>
