Main page email now shows as white color instead of purple.

--- a/MovieGalleryApp.Web/wwwroot/css/style.css
+++ b/MovieGalleryApp.Web/wwwroot/css/style.css
@@ -464,3 +464,8 @@ body {
     color: white;
     text-decoration: none;
 }
+
+.nav-text-decoration{
+    color: white;
+    text-decoration: none;
+}
